--- a/hw2/Makefile
+++ b/hw2/Makefile
@@ -1,5 +1,6 @@
-Analyer: Data.o Analyer.cpp
-	g++ -o Analyer Analyer.cpp Data.o
+All: Data.o lltable.cpp lltable.cpp
+	g++ -o set set.cpp Data.o
+	g++ -o lltable lltable.cpp Data.o
 
 Data.o: Data.cpp Data.h
 	g++ -c Data.cpp
